*Added query paging for IRODSFile.list() methods to accumulate all files/subdirs when listing
*Fix seek to use OpenedDataObjInp, removed prior impl
*Fix of connection disconnect behavior to return the connection to the IRODSProtocolManager
*Addition of a SessionClosingFileInputStream in the io libraries.
*Added code for remote execution of scripts.  This will be updated for new api that allows streaming once tested.
*parallel transfer threads now cache any exceptions. These are reviewed by the parallel transfer runner and passed back up to the
caller
*added socket timeout processing as an option
*fix path bug in IRODSFile that was putting windows path separators in irods file names on Windows for certain operations.
*fix single quotes in file names
*Added IRODSPasswordUtilities with an implementation of iRODS password obfuscation routines.
*Work in progress, not yet completed, on modify user password from user and admin perspectives.  Need to finish implementing the admin-side obfuscation per
fixme's in UserAOImplTest
*Added cache of iRODS challenge during sign-on for later use in obfuscation routines, see IRODSCommands
*Began working on a jargon.properties and the ability to inject customizations of Jargon behavior into iRODS session.
**gets/puts now use new jargon properties to control number of threads
*Began work on simpleQuery support
*[#20] 10000 file transfer, marked complete after 5000
*Added buffering to input/output streams for enhanced performance
*[#180] [iROD-Chat:6165] Jargon 2.4.1 and Error -321000 (USER_NO_RESC_INPUT_ERR) - added capability to pull default resource from iRODS account if not specified.
* [#176] put/get resource switching - WORK IN PROGRESS
* [#181] rule requests transfer from unknown protocol error executing iRule - added capability to process a dest resource in the rule return params.
* [#50] Bugzilla import - -p and -P options in streaming
*methods added for setting ACL's in admin mode for data objects and collections