@@ -53,3 +53,4 @@ fixme's in UserAOImplTest
 * [#181] rule requests transfer from unknown protocol error executing iRule - added capability to process a dest resource in the rule return params.
 * [#50] Bugzilla import - -p and -P options in streaming
 *methods added for setting ACL's in admin mode for data objects and collections
+*[#220] file handle leak in ParallelGetTransferThread
